2004-02-29  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua/elem.scm: added functional tags extra-header: and
	extra-header/
	* examples/login/login.kahua: use extra-header: instead of symbol.

2004-02-29  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm (kahua-db-open-dbi): handles
	<dbi-exception> correctly.
	* test/persistence-dbi.scm : handles <dbi-exception> correctly.

2004-02-29  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua-admin.in : add moduser command that changes password.
	* src/kahua/developer.scm :
	(developer-password-set!): bug fixed.
	(developer-roles-set!): added.
	(find-developer): user does not found, raise error.
	(kahua-change-developer-password): removed old-password argument
	and added validation for new-password.

2004-02-28  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm :
	(kahua-persistent-classes-in-db):
	(kahua-persistent-class-generation):
	(kahua-persistent-class-definition): added metalevel API.
	(translate-up, translate-down): fixed a bug that caused an error
	when upgrading databases created by older kahua.persistence.
	(autoloads): make the test pass without dbi.

2004-02-27  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm (kahua-object reader): check if the
	generation of instance is newer than currently recorded in-db class
	generation, and if so, re-read metainfo.
	(compute-translation-directive): fixed a bug that the translation
	directive might have been assigned incorrectly.

	* src/kahua/persistence.scm:
	(<kahua-db-dbi> etc): added support of DBI back-end.  Tested with
	mysql.  The back-end database can be specified by "mysql:" or
	"pg:" prefix in the database pathname.  If these paths
	are specified, dbi module is autoloaded, so the caller doesn't
	need to load dbi explicitly.  (And kahua.persistence still works
	without dbi, as far as such pathnames aren't specified).
	The current implementation is a prototype, inefficient and
	not robust.