@@ -5,7 +5,7 @@
 ;;  Copyright (c) 2003-2004 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: kahua-spvr.in,v 1.17 2004/02/27 04:33:20 ko1 Exp $
+;; $Id: kahua-spvr.in,v 1.18 2004/02/29 15:29:37 ko1 Exp $
 
 ;; For clients, this server works as a receptionist of kahua system.
 ;; It opens a socket where initial clients will connect.
@@ -299,7 +299,16 @@
     (if (eq? (queue-front wq) w)
       (dequeue! wq)
       (remove-from-queue! (cut eq? w <>) wq))
-    (finish-worker w)
+    (if (and (kahua-auto-restart)
+	     (not (zombee? w)))
+	;; unexpected terminated process
+	(begin
+	  (log-worker-action "restart unexpected terminated worker" w)
+	  (restart-workers self (list w)))
+	;;
+	(begin
+	  (log-worker-action "collect finished worker" w)
+	  (finish-worker w)))
     w))
 
 ;; terminate all workers
@@ -333,9 +342,7 @@
 		 (> d (kahua-ping-timeout-sec)))
 	    (begin
 	      (log-worker-action "ping timeout" worker)
-	      #t) ; timeout!
-	      
-	    
+	      #t) ; timeout!	    
 	    ;; not timeout
 	    (begin
 	      (if (and (ping-responded? worker)
@@ -373,8 +380,8 @@
 	  (lambda ()
 	    (with-error-handler
 	     (lambda (e)
-	       ;; to be zombee
-	       (set! (ref worker 'worker-zombee) #t))
+	       #t ;; do nothing, collected by check-workers
+	       )
 	     (lambda ()
 	       (reset-sock)
 	       (set! (ref worker 'ping-responded) #f)
